[package]
name = "corncobs"
version = "0.1.1"
authors = ["Cliff L. Biffle <code@cliffle.com>"]
edition = "2021"
description = "COBS encode/decode for Rust no_std targets"
license = "MPL-2.0"
repository = "https://github.com/cbiffle/corncobs/"
keywords = ["cobs", "embedded", "no_std"]
readme = "README.mkdn"

[dependencies]

[features]
default = []
std = []

[dev-dependencies]
criterion = "0.3.5"
cobs-rs = "1.1"
postcard-cobs = "0.2"
cobs = "0.1"

[profile.release]
debug = 2

[workspace]
members = ["fuzzing"]

[[bench]]
name = "benchy"
harness = false

[[bench]]
name = "comparison"
harness = false
